--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -10,3 +10,8 @@
   <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.css">
   <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.js"></script>
 </head>
+<script>
+	$(document).ready(function() {
+    $('table.display').DataTable();
+} );
+</script>
