--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -11,7 +11,7 @@
   <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.js"></script>
 </head>
 <script>
-	$(document).ready(function() {
-    $('table.display').DataTable();
-} );
+$('table').each(function(){
+    $(this).DataTable();
+});
 </script>
